--- a/RePoE/data/stat_translations/areas.json
+++ b/RePoE/data/stat_translations/areas.json
@@ -37350,7 +37350,7 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% increased Effect of Auras on you"
+        "string": "{0}% increased Effect of Aura Buffs on you"
       }
     ],
     "ids": [
@@ -37371,7 +37371,7 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% increased Effect of Auras on your Minions"
+        "string": "{0}% increased Effect of Aura Buffs on your Minions"
       }
     ],
     "ids": [
@@ -104166,7 +104166,7 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% increased Effect of Auras on You for each Herald affecting you"
+        "string": "{0}% increased Effect of Aura Buffs on You for each Herald affecting you"
       },
       {
         "condition": [
@@ -104182,7 +104182,7 @@
             "negate"
           ]
         ],
-        "string": "{0}% reduced Effect of Auras on You for each Herald affecting you"
+        "string": "{0}% reduced Effect of Aura Buffs on You for each Herald affecting you"
       }
     ],
     "ids": [
