--- a/RePoE/data/stat_translations/areas.json
+++ b/RePoE/data/stat_translations/areas.json
@@ -5776,7 +5776,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Socketed Skills deal {0}% less Attack Damage"
       }
@@ -6044,7 +6046,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Socketed Skills have {0}% reduced Attack Speed"
       }
@@ -6079,7 +6083,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Socketed Skills have {0}% reduced Cast Speed"
       }
@@ -6133,7 +6139,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Socketed Skills deal {0}% less Spell Damage"
       }
@@ -26501,6 +26509,7 @@
         ],
         "index_handlers": [
           [
+            "negate",
             "divide_by_twelve"
           ]
         ],
@@ -33659,7 +33668,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Physical Damage with Ranged Weapons"
       }
@@ -33805,7 +33816,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Knockback Distance"
       }
@@ -37350,32 +37363,11 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% increased Effect of Aura Buffs on you"
+        "string": "{0}% increased effect of Non-Curse Auras from your Skills on your Minions"
       }
     ],
     "ids": [
-      "aura_effect_on_self_+%"
-    ]
-  },
-  {
-    "English": [
-      {
-        "condition": [
-          {
-            "min": 1
-          }
-        ],
-        "format": [
-          "#"
-        ],
-        "index_handlers": [
-          []
-        ],
-        "string": "{0}% increased Effect of Aura Buffs on your Minions"
-      }
-    ],
-    "ids": [
-      "minions_have_aura_effect_+%"
+      "minions_have_non_curse_aura_effect_+%_from_parent_skills"
     ]
   },
   {
@@ -43426,7 +43418,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Chests have {0}% reduced Item Quantity"
       }
@@ -43461,7 +43455,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Chests have {0}% reduced Item Rarity"
       }
@@ -54278,7 +54274,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Enemies are Frozen as if you had dealt {0}% less Damage"
       }
@@ -55752,7 +55750,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Attacks with this Weapon have {0}% reduced Physical Damage per 250 Evasion Rating"
       }
@@ -55787,7 +55787,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Attack Damage per 450 Evasion Rating"
       }
@@ -57883,7 +57885,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Minions have {0}% reduced Area of Effect"
       }
@@ -60662,6 +60666,7 @@
         ],
         "index_handlers": [
           [
+            "negate",
             "times_twenty"
           ]
         ],
@@ -61530,7 +61535,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Ball Lightning Damage"
       }
@@ -61565,7 +61572,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Damage with Bleeding"
       }
@@ -61600,7 +61609,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Poison Duration"
       }
@@ -61904,7 +61915,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Damage with Poison"
       }
@@ -64524,7 +64537,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Warcry Speed"
       }
@@ -65166,7 +65181,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% less chance to Evade Melee Attacks during Onslaught"
       }
@@ -65201,7 +65218,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% less chance to Evade Projectile Attacks during Onslaught"
       }
@@ -68413,7 +68432,7 @@
             "negate"
           ]
         ],
-        "string": "Hits against Nearby Enemies have {0} reduced Critical Strike Chance"
+        "string": "Hits against Nearby Enemies have {0}% reduced Critical Strike Chance"
       }
     ],
     "ids": [
@@ -69448,7 +69467,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Blind duration"
       }
@@ -69678,7 +69699,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Damage with Hits and Ailments against Burning Enemies"
       }
@@ -79801,7 +79824,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Critical Strike Chance against Enemies on Full Life"
       }
@@ -80586,7 +80611,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Bleeding Duration per 12 Intelligence"
       }
@@ -80642,7 +80669,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Ancestral Protector Totem grants {0}% reduced Attack Speed while Active"
       }
@@ -80698,7 +80727,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Ancestral Warchief Totem grants {0}% reduced Melee Damage while Active"
       }
@@ -89370,7 +89401,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Attack and Cast Speed if you've taken a Savage\nHit Recently"
       }
@@ -89405,7 +89438,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% less Damage"
       }
@@ -93604,7 +93639,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Golem Damage for each Type of Golem you have Summoned"
       }
@@ -93639,7 +93676,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Golem Damage per Summoned Golem"
       }
@@ -96557,7 +96596,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Physical Damage taken while moving"
       }
@@ -103599,7 +103640,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Attack Speed if you've Killed Recently"
       }
@@ -103838,7 +103881,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Attack Speed while affected by Precision"
       }
@@ -104166,7 +104211,7 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% increased Effect of Aura Buffs on You for each Herald affecting you"
+        "string": "Aura Buffs from Skills have {0}% increased Effect on you for each Herald affecting you"
       },
       {
         "condition": [
@@ -104182,11 +104227,11 @@
             "negate"
           ]
         ],
-        "string": "{0}% reduced Effect of Aura Buffs on You for each Herald affecting you"
+        "string": "Aura Buffs from Skills have {0}% increased Effect on you for each Herald affecting you"
       }
     ],
     "ids": [
-      "aura_effect_on_you_+%_per_herald_effecting_you"
+      "aura_effect_on_self_from_skills_+%_per_herald_effecting_you"
     ]
   },
   {
@@ -110047,7 +110092,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Buff Effect on Low Energy Shield"
       }
@@ -112753,7 +112800,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Chaos Damage with Attack Skills"
       }
@@ -112788,7 +112837,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Chaos Damage with Spell Skills"
       }
@@ -113950,7 +114001,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Cold Damage with Attack Skills"
       }
@@ -113985,7 +114038,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Cold Damage with Spell Skills"
       }
@@ -117020,7 +117075,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Damage if you've Frozen an Enemy Recently"
       }
@@ -120440,7 +120497,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Elemental Damage with Attack Skills"
       }
@@ -120475,7 +120534,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Elemental Damage with Attack Skills per Power Charge"
       }
@@ -123267,7 +123328,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Fire Damage with Attack Skills"
       }
@@ -123302,7 +123365,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Fire Damage with Spell Skills"
       }
@@ -124378,7 +124443,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Frostbolt Projectiles gain {0}% reduced Projectile Speed per second"
       }
@@ -125052,15 +125119,32 @@
     "English": [
       {
         "condition": [
-          {}
+          {
+            "max": 1,
+            "min": 1
+          }
         ],
         "format": [
-          "ignore"
+          "#"
         ],
         "index_handlers": [
           []
         ],
-        "string": "Gain an Endurance Charge every second if you've been Hit Recently"
+        "string": "Gain {0} Endurance Charge every second if you've been Hit Recently"
+      },
+      {
+        "condition": [
+          {
+            "min": 2
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Gain {0} Endurance Charges every second if you've been Hit Recently"
       }
     ],
     "ids": [
@@ -126198,6 +126282,7 @@
         ],
         "index_handlers": [
           [
+            "negate",
             "milliseconds_to_seconds"
           ]
         ],
@@ -131700,7 +131785,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Lightning Damage with Attack Skills"
       }
@@ -131735,7 +131822,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Lightning Damage with Spell Skills"
       }
@@ -141353,7 +141442,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Damage Over Time during Flask Effect"
       }
@@ -142367,7 +142458,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "With at least 40 Intelligence in Radius, Frostbolt Projectiles gain {0}% reduced Projectile Speed per second"
       }
@@ -154854,7 +154947,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Rogue Exiles deal {0}% reduced Damage"
       }
@@ -155003,7 +155098,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "Rogue Exiles have {0}% reduced Maximum Life"
       }
@@ -162878,7 +162975,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Movement Speed while Bleeding"
       }
@@ -163550,7 +163649,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Effect of Non-Curse Auras from your Skills on Enemies"
       }
@@ -165502,7 +165603,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Physical Damage with Attack Skills"
       }
@@ -165537,7 +165640,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Physical Damage with Spell Skills"
       }
@@ -165943,7 +166048,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "negate"
+          ]
         ],
         "string": "{0}% reduced Poison Duration for each Poison you have inflicted Recently"
       }
