--- a/RePoE/data/stat_translations/areas.json
+++ b/RePoE/data/stat_translations/areas.json
@@ -9083,7 +9083,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Consumes a Void Charge to Trigger Level {0} Void Shot when you fire Arrows"
+        "string": "Consumes a Void Charge to Trigger Level {0} Void Shot when you fire Arrows with a Non-Triggered Skill"
       }
     ],
     "ids": [
@@ -40856,12 +40856,12 @@
           {}
         ],
         "format": [
-          "ignore"
+          "#"
         ],
         "index_handlers": [
           []
         ],
-        "string": "Area has patches of shocking ground"
+        "string": "Area has patches of Shocking Ground which increase Damage taken by {0}%"
       }
     ],
     "ids": [
@@ -89111,7 +89111,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Despair has {0}% increased Mana Reservation"
+        "string": "Despair has {0}% increased Mana Reservation if Cast as an Aura"
       },
       {
         "condition": [
@@ -89127,7 +89127,7 @@
             "negate"
           ]
         ],
-        "string": "Despair has {0}% reduced Mana Reservation"
+        "string": "Despair has {0}% reduced Mana Reservation if Cast as an Aura"
       }
     ],
     "ids": [
@@ -89148,7 +89148,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Conductivity has {0}% increased Mana Reservation"
+        "string": "Conductivity has {0}% increased Mana Reservation if Cast as an Aura"
       },
       {
         "condition": [
@@ -89164,7 +89164,7 @@
             "negate"
           ]
         ],
-        "string": "Conductivity has {0}% reduced Mana Reservation"
+        "string": "Conductivity has {0}% reduced Mana Reservation if Cast as an Aura"
       }
     ],
     "ids": [
@@ -89185,7 +89185,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Flammability has {0}% increased Mana Reservation"
+        "string": "Flammability has {0}% increased Mana Reservation if Cast as an Aura"
       },
       {
         "condition": [
@@ -89201,7 +89201,7 @@
             "negate"
           ]
         ],
-        "string": "Flammability has {0}% reduced Mana Reservation"
+        "string": "Flammability has {0}% reduced Mana Reservation if Cast as an Aura"
       }
     ],
     "ids": [
@@ -89222,7 +89222,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Frostbite has {0}% increased Mana Reservation"
+        "string": "Frostbite has {0}% increased Mana Reservation if Cast as an Aura"
       },
       {
         "condition": [
@@ -89238,7 +89238,7 @@
             "negate"
           ]
         ],
-        "string": "Frostbite has {0}% reduced Mana Reservation"
+        "string": "Frostbite has {0}% reduced Mana Reservation if Cast as an Aura"
       }
     ],
     "ids": [
@@ -89259,7 +89259,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Temporal Chains has {0}% increased Mana Reservation"
+        "string": "Temporal Chains has {0}% increased Mana Reservation if Cast as an Aura"
       },
       {
         "condition": [
@@ -89275,7 +89275,7 @@
             "negate"
           ]
         ],
-        "string": "Temporal Chains has {0}% reduced Mana Reservation"
+        "string": "Temporal Chains has {0}% reduced Mana Reservation if Cast as an Aura"
       }
     ],
     "ids": [
@@ -89296,7 +89296,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Vulnerability has {0}% increased Mana Reservation"
+        "string": "Vulnerability has {0}% increased Mana Reservation if Cast as an Aura"
       },
       {
         "condition": [
@@ -89312,7 +89312,7 @@
             "negate"
           ]
         ],
-        "string": "Vulnerability has {0}% reduced Mana Reservation"
+        "string": "Vulnerability has {0}% reduced Mana Reservation if Cast as an Aura"
       }
     ],
     "ids": [
@@ -113350,7 +113350,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Create Shocked Ground when Hit with an Attack"
+        "string": "Create Chilled Ground when Hit with an Attack"
       }
     ],
     "ids": [
@@ -144814,7 +144814,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Curse Skills have {0}% increased Mana Reservation"
+        "string": "{0}% increased Mana Reservation of Curse Auras"
       },
       {
         "condition": [
@@ -144830,7 +144830,7 @@
             "negate"
           ]
         ],
-        "string": "Curse Skills have {0}% reduced Mana Reservation"
+        "string": "{0}% reduced Mana Reservation of Curse Auras"
       }
     ],
     "ids": [
@@ -180138,6 +180138,28 @@
     "English": [
       {
         "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "ignore"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Insanity effects while delirious"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "additional_insanity_effects_while_delirious"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
           {}
         ],
         "format": [
@@ -180368,6 +180390,26 @@
     "hidden": true,
     "ids": [
       "base_monster_will_be_deleted_on_death"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Bleeding while moving deals {0}% of base damage"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "bleeding_moving_damage_%_of_base_override"
     ]
   },
   {
@@ -181525,6 +181567,28 @@
           }
         ],
         "format": [
+          "ignore"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Movement skill animations can be skipped"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "enable_movement_skill_animation_skipping"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
           "#"
         ],
         "index_handlers": [
@@ -181969,6 +182033,28 @@
     "English": [
       {
         "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "ignore"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Skill weapon restrictions are ignored"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "ignore_skill_weapon_restrictions"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
           {}
         ],
         "format": [
@@ -181983,6 +182069,45 @@
     "hidden": true,
     "ids": [
       "intelligence_per_level"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "max": 1,
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "milliseconds_to_seconds"
+          ]
+        ],
+        "string": "Impale lasts {0} second"
+      },
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "milliseconds_to_seconds"
+          ]
+        ],
+        "string": "Impale lasts {0} seconds"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "impaled_debuff_base_duration_ms"
     ]
   },
   {
@@ -182093,6 +182218,26 @@
     "hidden": true,
     "ids": [
       "is_shocked"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "{0} item drop slots"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "item_drop_slots"
     ]
   },
   {
@@ -184192,6 +184337,26 @@
         "index_handlers": [
           []
         ],
+        "string": "Can have up to {0} Azurite Stacks"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "max_azurite_debuff_stacks"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
         "string": "Can have up to {0} Corrupted Blood Rain Stacks"
       }
     ],
@@ -184232,6 +184397,66 @@
         "index_handlers": [
           []
         ],
+        "string": "Can have up to {0} Darkness Stacks"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "max_delve_degen_stacks"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Can have up to {0} Fire Beam Stacks"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "max_fire_beam_stacks"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Can have up to {0} Frost Nova Stacks"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "max_frost_nova_stacks"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
         "string": "Can have up to {0} Explosive Arrow Stacks"
       }
     ],
@@ -184258,6 +184483,26 @@
     "hidden": true,
     "ids": [
       "max_rampage_stacks"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Can have up to {0} Talisman degen Stacks"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "max_talisman_degen_stacks"
     ]
   },
   {
@@ -184390,12 +184635,166 @@
         "index_handlers": [
           []
         ],
+        "string": "Can have up to {0} Righteous Charges"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "maximum_righteous_charges"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Melee Damage counts as {0}% more for Stuns"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "melee_hit_damage_stun_multiplier_+%"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
         "string": "Minions deal {0}% increased Damage per 10 Rampage Stacks"
       }
     ],
     "hidden": true,
     "ids": [
       "minion_damage_+%_per_10_rampage_stacks"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Minions take {0}% more Damage from Guillotine Traps"
+      },
+      {
+        "condition": [
+          {
+            "max": -1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "negate"
+          ]
+        ],
+        "string": "Minions take {0}% less Damage from Guillotine Traps"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "minion_damage_taken_+%_from_guillotine_traps_final"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Minions take {0}% more Damage from Spike Traps"
+      },
+      {
+        "condition": [
+          {
+            "max": -1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "negate"
+          ]
+        ],
+        "string": "Minions take {0}% less Damage from Spike Traps"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "minion_damage_taken_+%_from_spike_traps_final"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Minions take {0}% more Damage over Time by Labyrinth Traps"
+      },
+      {
+        "condition": [
+          {
+            "max": -1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "negate"
+          ]
+        ],
+        "string": "Minions take {0}% less Damage over Time by Labyrinth Traps"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "minions_have_labyrinth_trap_degen_effect_+%"
     ]
   },
   {
@@ -184588,6 +184987,44 @@
     "hidden": true,
     "ids": [
       "monster_base_type_attack_cast_speed_+%_and_damage_-%_final"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Monsters deal {0}% more Bleeding Damage"
+      },
+      {
+        "condition": [
+          {
+            "max": -1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "negate"
+          ]
+        ],
+        "string": "Monsters deal {0}% less Bleeding Damage"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "monster_bleeding_damage_+%_final"
     ]
   },
   {
@@ -185148,6 +185585,44 @@
           }
         ],
         "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Monsters deal {0}% more Ignite Damage"
+      },
+      {
+        "condition": [
+          {
+            "max": -1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "negate"
+          ]
+        ],
+        "string": "Monsters deal {0}% less Ignite Damage"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "monster_ignite_damage_+%_final"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
           "ignore"
         ],
         "index_handlers": [
@@ -185251,12 +185726,50 @@
             "negate"
           ]
         ],
-        "string": "Monster deals {0}% less Damage against Minions3"
+        "string": "Monster deals {0}% less Damage against Minions"
       }
     ],
     "hidden": true,
     "ids": [
       "monster_penalty_against_minions_damage_+%_final_vs_player_minions"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Monsters deal {0}% more Poison Damage"
+      },
+      {
+        "condition": [
+          {
+            "max": -1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "negate"
+          ]
+        ],
+        "string": "Monsters deal {0}% less Poison Damage"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "monster_poison_damage_+%_final"
     ]
   },
   {
@@ -185562,6 +186075,84 @@
     "English": [
       {
         "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Monster non-physical Daamge counts as {0}% more for Stun"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "non_physical_hit_damage_stun_multiplier_+%"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "{0}% more Damage per Frenzy Charge"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "object_inherent_damage_+%_final_per_frenzy_charge"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Melee hits have {0}% more Stun Duration"
+      },
+      {
+        "condition": [
+          {
+            "max": -1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Melee hits have {0}% less Stun Duration"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "object_inherent_melee_hit_stun_duration_+%_final"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
           {}
         ],
         "format": [
@@ -185719,6 +186310,26 @@
     "hidden": true,
     "ids": [
       "removes_%_mana_on_hit"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {}
+        ],
+        "format": [
+          "ignore"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "Melee range scaled by model size"
+      }
+    ],
+    "hidden": true,
+    "ids": [
+      "scale_melee_range_to_actor_scale"
     ]
   },
   {
