--- a/RePoE/data/stat_translations/areas.json
+++ b/RePoE/data/stat_translations/areas.json
@@ -8134,7 +8134,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Grants Level {0} Abyssal Cry Skill"
+        "string": "Grants Level {0} Intimidating Cry Skill"
       }
     ],
     "ids": [
@@ -28894,7 +28894,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Bow Attacks fire {0} additional Arrows if you haven\u2019t Cast Dash recently"
+        "string": "Bow Attacks fire {0} additional Arrows if you haven't Cast Dash recently"
       }
     ],
     "ids": [
@@ -41205,6 +41205,43 @@
     ],
     "ids": [
       "fortify_effect_+%"
+    ]
+  },
+  {
+    "English": [
+      {
+        "condition": [
+          {
+            "min": 1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          []
+        ],
+        "string": "{0}% increased Melee Cold Damage while you have Fortify"
+      },
+      {
+        "condition": [
+          {
+            "max": -1
+          }
+        ],
+        "format": [
+          "#"
+        ],
+        "index_handlers": [
+          [
+            "negate"
+          ]
+        ],
+        "string": "{0}% reduced Melee Cold Damage while you have Fortify"
+      }
+    ],
+    "ids": [
+      "melee_cold_damage_+%_while_fortify_is_active"
     ]
   },
   {
@@ -105404,7 +105441,7 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% increased Attack Speed if you haven\u2019t Cast Dash recently"
+        "string": "{0}% increased Attack Speed if you haven't Cast Dash recently"
       },
       {
         "condition": [
@@ -105420,7 +105457,7 @@
             "negate"
           ]
         ],
-        "string": "{0}% reduced Attack Speed if you haven\u2019t Cast Dash recently"
+        "string": "{0}% reduced Attack Speed if you haven't Cast Dash recently"
       }
     ],
     "ids": [
@@ -117813,7 +117850,7 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% increased Critical Strike Chance if you haven\u2019t Blocked Recently"
+        "string": "{0}% increased Critical Strike Chance if you haven't Blocked Recently"
       },
       {
         "condition": [
@@ -117829,7 +117866,7 @@
             "negate"
           ]
         ],
-        "string": "{0}% reduced Critical Strike Chance if you haven\u2019t Blocked Recently"
+        "string": "{0}% reduced Critical Strike Chance if you haven't Blocked Recently"
       }
     ],
     "ids": [
@@ -125360,7 +125397,7 @@
             "per_minute_to_per_second"
           ]
         ],
-        "string": "Regenerate {0}% of Energy Shield per second if you\u2019ve Cursed an Enemy Recently"
+        "string": "Regenerate {0}% of Energy Shield per second if you've Cursed an Enemy Recently"
       }
     ],
     "ids": [
@@ -125383,7 +125420,7 @@
             "per_minute_to_per_second"
           ]
         ],
-        "string": "Regenerate {0}% of Energy Shield per second if you\u2019ve Killed an Enemy Recently"
+        "string": "Regenerate {0}% of Energy Shield per second if you've Killed an Enemy Recently"
       }
     ],
     "ids": [
@@ -173893,7 +173930,7 @@
         "index_handlers": [
           []
         ],
-        "string": "You lose Rage {0}% faster"
+        "string": "Inherent loss of Rage is {0}% faster"
       },
       {
         "condition": [
@@ -173909,7 +173946,7 @@
             "negate"
           ]
         ],
-        "string": "You lose Rage {0}% slower"
+        "string": "Inherent loss of Rage is {0}% slower"
       }
     ],
     "ids": [
@@ -179703,7 +179740,7 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% increased Attack Speed if you\u2019ve changed Stance Recently"
+        "string": "{0}% increased Attack Speed if you've changed Stance Recently"
       },
       {
         "condition": [
@@ -179719,7 +179756,7 @@
             "negate"
           ]
         ],
-        "string": "{0}% reduced Attack Speed if you\u2019ve changed Stance Recently"
+        "string": "{0}% reduced Attack Speed if you've changed Stance Recently"
       }
     ],
     "ids": [
@@ -186672,7 +186709,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Sacred Bastion"
+        "string": "Imbalanced Guard"
       }
     ],
     "ids": [
