--- a/RePoE/data/stat_translations/areas.json
+++ b/RePoE/data/stat_translations/areas.json
@@ -43379,7 +43379,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains an extra Shrine"
+        "string": "Area contains an additional Shrine"
       },
       {
         "condition": [
@@ -43393,7 +43393,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains {0} extra Shrines"
+        "string": "Area contains {0} additional Shrines"
       }
     ],
     "ids": [
@@ -43597,7 +43597,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains an extra Strongbox"
+        "string": "Area contains an additional Strongbox"
       },
       {
         "condition": [
@@ -43611,7 +43611,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains {0} extra Strongboxes"
+        "string": "Area contains {0} additional Strongboxes"
       }
     ],
     "ids": [
@@ -49120,7 +49120,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Ignited Enemies you hit are destroyed on Kill"
+        "string": "Ignited Enemies Killed by your Hits are destroyed"
       }
     ],
     "ids": [
@@ -49158,7 +49158,7 @@
         "index_handlers": [
           []
         ],
-        "string": "{0}% additional chance for Slain monsters to drop Scrolls of Wisdom"
+        "string": "{0}% chance for Slain monsters to drop an additional Scroll of Wisdom"
       }
     ],
     "ids": [
@@ -171169,7 +171169,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains an extra Gloom Shrine"
+        "string": "Area contains an additional Gloom Shrine"
       },
       {
         "condition": [
@@ -171183,7 +171183,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains {0} extra Gloom Shrines"
+        "string": "Area contains {0} additional Gloom Shrines"
       }
     ],
     "ids": [
@@ -171205,7 +171205,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains an extra Harbinger"
+        "string": "Area contains an additional Harbinger"
       },
       {
         "condition": [
@@ -171219,7 +171219,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains {0} extra Harbingers"
+        "string": "Area contains {0} additional Harbingers"
       }
     ],
     "ids": [
@@ -171241,7 +171241,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains an extra Resonating Shrine"
+        "string": "Area contains an additional Resonating Shrine"
       },
       {
         "condition": [
@@ -171255,7 +171255,7 @@
         "index_handlers": [
           []
         ],
-        "string": "Area contains {0} extra Resonating Shrines"
+        "string": "Area contains {0} additional Resonating Shrines"
       }
     ],
     "ids": [
@@ -197293,13 +197293,15 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "per_minute_to_per_second"
+          ]
         ],
         "string": "Totems Regenerate {0}% of Life per second"
       }
     ],
     "ids": [
-      "totems_regenerate_%_life_per_second"
+      "totems_regenerate_%_life_per_minute"
     ]
   },
   {
