--- a/RePoE/data/stat_translations/areas.json
+++ b/RePoE/data/stat_translations/areas.json
@@ -140238,7 +140238,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "divide_by_one_hundred_2dp_if_required"
+          ]
         ],
         "string": "Alert Level increases by {0}% per second"
       },
@@ -140253,6 +140255,7 @@
         ],
         "index_handlers": [
           [
+            "divide_by_one_hundred_2dp_if_required",
             "negate"
           ]
         ],
@@ -181993,7 +181996,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "metamorphosis_reward_description"
+          ]
         ],
         "string": "{0}"
       }
@@ -182012,7 +182017,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "metamorphosis_reward_description"
+          ]
         ],
         "string": "{0}"
       }
@@ -182031,7 +182038,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "metamorphosis_reward_description"
+          ]
         ],
         "string": "{0}"
       }
@@ -182050,7 +182059,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "metamorphosis_reward_description"
+          ]
         ],
         "string": "{0}"
       }
@@ -182069,7 +182080,9 @@
           "#"
         ],
         "index_handlers": [
-          []
+          [
+            "metamorphosis_reward_description"
+          ]
         ],
         "string": "{0}"
       }
