--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches: [ "master" ]
+  schedule:
+    - cron: "0 1 * * *"
 
 jobs:
   build:
@@ -16,65 +18,70 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4.2.2
         with:
+          path: poe1
+      - name: checkout repoe
+        uses: actions/checkout@v4.2.2
+        with:
+          repository: repoe-fork/repoe-fork
           path: RePoE
       - name: checkout pypoe
         uses: actions/checkout@v4.2.2
         with:
-          repository: lvlvllvlvllvlvl/PyPoE
+          repository: repoe-fork/pypoe
           path: PyPoE
       - name: Install poetry
         run: pipx install 'poetry~=1.8'
       - name: setup python
         uses: actions/setup-python@v5.6.0
         with:
-          python-version: "3.11"
+          python-version: "3.13"
           cache: poetry
+      - run: curl --fail 'https://ggpk.exposed/version?poe=1' | sed -r 's|.*/([0-9](\.[0-9]+)+)/$|\1|' > poe1/version.txt
+      - run: git ls-remote https://github.com/poe-tool-dev/dat-schema.git refs/heads/main > poe1/schema.txt
+      - run: echo "version=$(cat poe1/version.txt)" >> "$GITHUB_OUTPUT"
+        id: version
       - name: clean data dir
-        run: find RePoE/RePoE/data/ '(' -name '*.json' -not -path '*/pob/*' -o -name '*.html' -o -name '*.txt' ')' -delete -print | wc -l
-      - name: copy text files
-        run: cp RePoE/RePoE/*.txt RePoE/RePoE/data/
-      - name: install repoe
-        run: |
-          poetry install
-          poetry run pypoe_schema_import -a stable
-          poetry run pypoe_schema_import -a stable --poe2 -u https://repoe-fork.github.io/dat-export/poe2/filtered.json
-        working-directory: RePoE/RePoE
+        run: find poe1/data '(' -name '*.json' -not -path '*/pob/*' -o -name '*.html' -o -name '*.txt' ')' -delete -print | wc -l
+      - run: poetry install
+        working-directory: RePoE
+      - run: poetry run pypoe_schema_import -a stable
+        working-directory: RePoE
       - name: update models
         run: |
           for i in *.schema.json
           do
             poetry run datamodel-codegen --input $i --input-file-type jsonschema --output ../model/${i/.schema.json/.py} --output-model-type pydantic_v2.BaseModel --disable-timestamp --use-double-quotes --enable-version-header
           done
-          poetry run generate-schema-doc --config footer_show_time=false ./ ../data/
         working-directory: RePoE/RePoE/schema
+      - run: poetry run generate-schema-doc --config footer_show_time=false RePoE/schema ../poe1/data/data-formats
+        working-directory: RePoE
       - name: run export
-        run: |
-          poetry --version
-          poetry run repoe all -l all --poe2
-          poetry run repoe all -l all
-        working-directory: RePoE/RePoE
+        run: poetry run repoe all -l all -o ../poe1/data
+        working-directory: RePoE
       - name: generate index.html
         run: |
-          find -type d -exec tree {} -H '.' --dirsfirst -F -L 1 -T "RePoE - Game version $(cat ../version.txt) / $(cat ../version2.txt)" -I 'index.html|schema_doc*' --noreport --charset utf-8 -o {}/index.html \;
-          sed -i 's|<h1>RePoE|<h1><a href="https://github.com/repoe-fork/repoe-fork">RePoE</a>|' index.html
-        working-directory: RePoE/RePoE/data/
+          find data -type d -exec tree {} -H '.' --dirsfirst -F -L 1 -T "RePoE - PoE version $(cat version.txt)" -I 'index.html|schema_doc*' --noreport --charset utf-8 -o {}/index.html \;
+          find data -name index.html -exec sed -i 's|<h1>RePoE|<h1><a href="https://github.com/repoe-fork/repoe-fork">RePoE</a>|' {} \;
+          mv index.html poe1.html
+          cat README.md | pipx run grip - --export data/index.html
+        working-directory: poe1/data
       - name: commit changes
         id: autocommit
         uses: stefanzweifel/git-auto-commit-action@v5.2.0
         with:
-          repository: RePoE
-          commit_message: "[skip ci] Automated export"
+          repository: poe1
+          commit_message: "[skip ci] Version ${{ steps.version.outputs.version }}"
       - name: upload gh-pages artifact
-        if: github.event_name == 'workflow_dispatch' || steps.autocommit.outputs.changes_detected == 'true'
+        if: github.event_name != 'schedule' || steps.autocommit.outputs.changes_detected == 'true'
         uses: actions/upload-pages-artifact@v3.0.1
         with:
-          path: RePoE/RePoE/data/
+          path: poe1/data
 
   deploy:
     runs-on: ubuntu-latest
 
     needs: build
-    if: github.event_name == 'workflow_dispatch' || needs.build.outputs.changes_detected == 'true'
+    if: github.event_name != 'schedule' || needs.build.outputs.changes_detected == 'true'
 
     permissions:
       pages: write
